finalized html styling

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -68,7 +68,7 @@ body {
     /* border-color: #739e5e; */
     border-color: white;
     /* color: black; */
-    margin: 0, 15px; 
+    margin:15px; 
 }
 
 .btn-primary:hover {
