--- a/views/maps.handlebars
+++ b/views/maps.handlebars
@@ -9,14 +9,13 @@
     </div>
   </div>
   <div class="row">
-	  <form id="userInput">
+	  <form id="userInput" class="form-inline">
 		<input type="text" class="form-control form-field" id="zipcode" required>
-		<button type="submit" class="btn-primary"> Search Your Zip Code </button>
+		<button type="submit" class="btn btn-primary btn-lg"> Search Your Zip Code </button>
 	</form>
 	<div class="result-container"></div>
   </div>
 </div>
-
 
 
     {{> footer/footer-block}}
