hiding API key and styling updates to recycling results

--- a/views/maps.handlebars
+++ b/views/maps.handlebars
@@ -13,10 +13,14 @@
 		<input type="text" class="form-control form-field" id="zipcode" required>
 		<button type="submit" class="btn btn-primary btn-lg"> Search Your Zip Code </button>
 	</form>
-	<div class="result-container"></div>
+  </div>
+  <div class="row justify-content-md-center">
+    <div class="col-sm-7">
+      <div class="result-container mx-auto"></div>
+    </div>
   </div>
 </div>
 
 
-    {{> footer/footer-block}}
+{{> footer/footer-block}}
 
